--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .cell {
     background-color: antiquewhite;
     border: 1px solid black;
-    margin: 2 2;
+    margin: 2px 2px;
     display: inline-block;
 }
