--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,17 @@
 .cell {
     background-color: antiquewhite;
-    border: 1px solid black;
-    margin: 2px 2px;
+    border: 2px solid black;
+    margin: 1px;
+    background-repeat: no-repeat;
     display: inline-block;
+    text-align: center;
+    padding: 0;
+    position: relative;
+}
+.cell img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
